add social media icons with hover effects

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="libs/ember-handlebars-loader-0.0.2.js"></script>
     <script src="bustle.js"></script>
     <script src="router.js"></script>
+    <script src="controllers/application.js"></script>
     <script src="controllers/home.js"></script>
     <script>
       EmberHandlebarsLoader.loadTemplates(['home', 'books', 'food', 'movies', 'music', 'application']);
@@ -18,5 +19,6 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
+
   </body>
 </html>
